samples/_failures_safe/1761608366_ecf7c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3314f98b.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_3314f98b.c:175:9: error: expected declaration or statement at end of input
  175 |         case TOKEN_EOF: return "EOF";
      |         ^~~~
./samples/SAFE/__tmp_3314f98b.c:175:9: error: expected declaration or statement at end of input
